# riemannian_pruning

./: FUTURE_WORK.md  LICENSE  Makefile  README.md  pyproject.toml
configs/: default.yaml
experiments/: RESULTS.md  __init__.py  baseline_pruning.py  head_heatmap.py  inspect_gpt2.py  run.py  score_distribution.py  sst2_pruning.py
src/: __init__.py  logging_config.py
src/curvature/: __init__.py  aggregator.py  graph.py  ricci.py  task.py
src/eval/: __init__.py  harness.py
src/models/: __init__.py  inspector.py  loader.py
src/pruning/: __init__.py  base.py  geometry.py  head_pruners.py  magnitude.py
tests/: test_curvature.py  test_inspector.py  test_pruning.py  test_task_curvature.py
